# webscraping-and-automation

./: .gitignore  README.md  docker-compose.yml
backend/api/: .env  index.js  package-lock.json  package.json
backend/api/models/: Process.js  User.js
backend/api/routes/: auth.js
backend/etl/: .env  main.py  pyproject.toml
backend/etl/config/: setting.py
backend/etl/databases/: mongodb.py
backend/etl/scraping/: pdf_data_extractor.py  pdf_downloader.py  scraper.py  test.txt
docker/api/: Dockerfile
docker/etl/: Dockerfile
docker/frontend/: Dockerfile
docker/rpa/: Dockerfile
docs/: JUSCASH.postman_collection.json
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx  types.ts
frontend/src/components/: Header.tsx  KanbanBoard.tsx  KanbanCard.tsx  KanbanColumn.tsx  KanbanHeader.tsx  TaskModal.tsx
frontend/src/hooks/: useAuth.ts  useProcesses.ts
frontend/src/pages/: KanbanBoard.tsx  Login.tsx  Register.tsx
frontend/src/utils/: filterTasks.ts  moveTask.ts
rpa/: main.py  pyproject.toml  scraping_first_page.py  webscraping.py
rpa/config/: setting.py
rpa/scraping/: scraper.py  utils.py
